--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -9,17 +9,36 @@
         android:id="@+id/tv"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:textSize="@dimen/sp_font_28sp"
-        android:text="test"
+        android:textSize="@dimen/sp_font_16sp"
+        android:text="demo"
         android:gravity="center"/>
     <Button
-        android:id="@+id/btn_call"
-        android:text="retrofit_call"
+        android:id="@+id/btn_retrofit1_async"
+        android:text="retrofit1_async"
         android:layout_width="match_parent"
-        android:layout_height="44dp"/>
+        android:layout_height="44dp"
+        android:paddingLeft="44dp"
+        android:gravity="left"
+        />
     <Button
-        android:id="@+id/btn_obver"
-        android:text="retrofit_obserable"
+        android:id="@+id/btn_retrofit1_obserable"
+        android:text="retrofit1_obserable"
         android:layout_width="match_parent"
-        android:layout_height="44dp"/>
+        android:layout_height="44dp"
+        android:paddingLeft="44dp"
+        android:gravity="left"/>
+    <Button
+        android:id="@+id/btn_retrofit2_call"
+        android:text="retrofit2_call"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:paddingLeft="44dp"
+        android:gravity="left"/>
+    <Button
+        android:id="@+id/btn_retrofit2_obserable"
+        android:text="retrofit2_obserable"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:paddingLeft="44dp"
+        android:gravity="left"/>
 </LinearLayout>
