--- a/app/src/main/res/layout/activity_yi_test.xml
+++ b/app/src/main/res/layout/activity_yi_test.xml
@@ -15,4 +15,14 @@
         android:layout_width="88dp"
         android:layout_height="44dp"
         android:text="close"/>
+
+    <EditText
+        android:layout_width="312dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_ip_address"
+        android:text="192.168.170.101"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginRight="36dp"
+        android:layout_marginBottom="36dp" />
 </LinearLayout>
