--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,22 +19,48 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
-            android:id="@+id/tv_ip_address"
-            android:text="192.168.42.1"
+            android:id="@+id/tv_ip_address1"
+            android:text="192.168.170.101"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             />
         <Button
-            android:id="@+id/btn_start"
+            android:id="@+id/btn_start1"
             android:layout_width="80dp"
             android:layout_height="match_parent"
-            android:text="切换"/>
+            android:text="切换1"/>
 
     </LinearLayout>
 
     <com.sp.vlc_player.PlayerView
-        android:id="@+id/pv_video"
+        android:id="@+id/pv_video1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_ip_address2"
+            android:layout_weight="1"
+            android:text="192.168.170.102" />
+
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:text="切换2"
+            android:id="@+id/btn_start2" />
+    </LinearLayout>
+
+    <com.sp.vlc_player.PlayerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pv_video2"
+        android:layout_weight="1" />
 </LinearLayout>
