--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,19 +17,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <EditText
             android:id="@+id/tv_ip_address"
-            android:text="192.168.42.1"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:text="192.168.31."
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
-        <Button
-            android:id="@+id/btn_start"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:text="切换"/>
+        <com.lantouzi.wheelview.WheelView
+            android:id="@+id/wheelview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/white"
+            app:lwvIntervalFactor="2"
+            app:lwvMarkRatio="1"
+            />
 
     </LinearLayout>
 
